Update main.css to correct search button alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,6 @@ header div.search button.searchButton {
   padding: 0.36em 0.7em;
   margin-left: -0.3em;
   position: relative;
-  top: 1px;
 }
 
 section#main {
